--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="cabecalho">
-       <img class="cabecalho-imagem" src="semfundo.png" alt="imagem do Alura">
+       <img class="cabecalho-imagem" src="timbre_semfundo.png" alt="imagem do Alura">
         <h1>Colégio Professores</h1>
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">escola</li>
