--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+            <p class="escola-texto-um">O colégio professores já teve sob a direção de três diretores, sendo eles profissionais extremamente capacitados.</p>
+            <p class="escola-texto-dois">Anselmo, Gilson e Roberto(sendo o atual diretor de nosso colégio).</p>
         </div>
         <img class="escola-imagem" src="ceeprofessores.jpg" alt="foto do colégio">
     </section>
