--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <section class="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <h2 class="escola-titulo">Sobre os diretores.</h2>
             <p class="escola-texto-um">O colégio professores já teve sob a direção de três diretores, sendo eles profissionais extremamente capacitados.</p>
             <p class="escola-texto-dois">Anselmo, Gilson e Roberto(sendo o atual diretor de nosso colégio).</p>
         </div>
