--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p class="escola-texto-um">O colégio professores já teve sob a direção de três diretores, sendo eles profissionais extremamente capacitados.</p>
             <p class="escola-texto-dois">Anselmo, Gilson e Roberto(sendo o atual diretor de nosso colégio).</p>
         </div>
-        <img class="escola-imagem" src="ceeprofessores.jpg" alt=IMG-20230601-WA0007.jpg>
+        <img class="escola-imagem" src=IMG-20230601-WA0007.jpg alt=IMG-20230601-WA0007.jpg>
     </section>
    
 </body>
