--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre os diretores.</h2>
             <p class="escola-texto-um">O colégio professores já teve sob a direção de três diretores, sendo eles profissionais extremamente capacitados.</p>
-            <p class="escola-texto-dois">Anselmo, Gilson e Roberto(sendo o atual diretor de nosso colégio).</p>
+            <p class="escola-texto-dois">Anselmo, Gilson e Roberto(sendo o atual diretor de nosso colégio). 
+            Ambos trabalhando com muita competênci, para fazer um colégio melhor para seus alunos.</p>
         </div>
         <img class="escola-imagem" src="IMG-20230601-WA0007".jpg alt=>
     </section>
