--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p class="escola-texto-dois">Anselmo, Gilson e Roberto(sendo o atual diretor de nosso colégio). 
             Ambos trabalhando com muita competênci, para fazer um colégio melhor para seus alunos.</p>
         </div>
-        <img class="escola-imagem" src="IMG-20230601-WA0007".jpg alt=>
+        <img class="escola-imagem" src=IMG-20230601-WA0007.jpg alt=>
     </section>
 </body>
 </html>
