--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
        <img class="cabecalho-imagem" src="timbre_semfundo.png" alt="imagem do Alura">
         <h1>Colégio Professores</h1>
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">escola</li>
-            <li class="cabecalho-lista-item">estudante</li>
+            <li class="cabecalho-lista-item"></li>
+            <li class="cabecalho-lista-item"></li>
         </ul>
     </header>
     <section class="escola">
