--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2 class="escola-titulo">Sobre os diretores.</h2>
             <p class="escola-texto-um">O colégio professores já teve sob a direção de três diretores, sendo eles profissionais extremamente capacitados.</p>
             <p class="escola-texto-dois">Anselmo, Gilson e Roberto(sendo o atual diretor de nosso colégio). 
-            Ambos trabalhando com muita competênci, para fazer um colégio melhor para seus alunos.</p>
+            Ambos trabalhando com muita competência, para fazer um colégio melhor para seus alunos.</p>
         </div>
         <img class="escola-imagem" src="IMG-20230601-WA0007.jpg" alt=>
     </section>
